# vibecraft

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CLAUDE_MD_ENHANCEMENTS.md  CLAUDE_old.md  CONTRIBUTING.md  DIRECTORY_ORGANIZATION.md  LICENSE  MCP_CONFIG_README.md  README.md  SYSTEM_PROMPT.md  docker-compose.yml  furniture.html  minecraft_items_filtered.json  minecraft_items_filtered_toon.txt  setup-all.sh  test.json
mcp-server/: .env.example  HTTP_SSE_SOLUTION.md  QUICK_START.md  README.md  WORLDEDIT_COMMAND_AUDIT.md  __main__.py  extract_furniture_inventory.py  install_http_deps.sh  pyproject.toml  requirements.txt  run_debug.py  run_fastmcp.sh  run_http.py  run_server.sh  run_shared_server.py  server_fastmcp.py  server_fastmcp_complete.py  server_http.py  setup.sh  start-vibecraft.sh  tail-logs.sh  test_furniture_placement_fix.py  test_search.py  test_sse_tools.py
mcp-server/logs/: workflow_state.json
mcp-server/scripts/: README.md  test_furniture_placement_fix.py  test_search.py
mcp-server/src/vibecraft/: __init__.py  block_utils.py  building_tools.py  config.py  furniture_placer.py  geometric_algorithms.py  minecraft_items_loader.py  paths.py  pattern_placer.py  rcon_manager.py  resources.py  sanitizer.py  schematic_manager.py  server.py  server_http.py  spatial_analyzer.py  spatial_analyzer_v2.py  terrain.py  terrain_generation.py  tool_schemas.py  validation_algorithms.py  workflow.py
mcp-server/src/vibecraft/tools/: __init__.py  core_tools.py  furniture_tools.py  (+10 more)
mcp-server/tests/: README.md  __init__.py  conftest.py  test_minecraft_item_search.py
(+156 files in other folders)
